--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,12 @@ body {
    min-height: 100%;
    width: 100%;
    z-index: 0;
-   overflow:hidden;
 }
 
 /* NAVIGATION */
 ul {
+	position: fixed;
+	width: 100%;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -129,6 +130,47 @@ li a:hover {
 	-o-transition: image_blur 2s !important;*/
 }
 
+/*GALERIE */
+.gallery {
+  width: auto;
+  margin: 0 auto;
+  padding: 5px;
+  /*background: black;*/
+  box-shadow: 0 1px 2px rgba(0,0,0,.3);
+}
+
+.gallery > div {
+  position: relative;
+  float: left;
+  padding: 5px;
+}
+
+.gallery > div > img {
+  display: block;
+  width: 200px;
+  transition: .1s transform;
+  transform: translateZ(0); /* hack */
+}
+
+.gallery > div:hover {
+  z-index: 1;
+}
+
+.gallery > div:hover > img {
+  transform: scale(1.8,1.8);
+  transition: .3s transform;
+}
+
+.cf:before, .cf:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+
+.cf:after {
+  clear: both;
+}
+
 /*@-webkit-keyframes blur-bg {
     0% { -webkit-filter: blur(0px);}
 	50% { -webkit-filter: blur(5px);}
@@ -142,7 +184,7 @@ li a:hover {
 
 @-webkit-keyframes blur {
   0%, 100%  { -webkit-filter: blur(0px); }
-  50% { -webkit-filter: blur(10px); }
+  50% { -webkit-filter: blur(5px); }
 }
 
 .centre {
