--- a/css/parchemin.css
+++ b/css/parchemin.css
@@ -1,7 +1,5 @@
 .parchmentTop {
-	position:relative;
 	width:730px;
-	top:25px;
 	font-family:georgia,times;
 	font-style:italic;
 	font-size:12pt;
@@ -9,6 +7,11 @@
 	background-image:url(../media/images/Parchment-Body.png);
 	text-align: center;
 	margin: 5px auto;
+	margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .parchment {
