--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,45 @@ li a:hover {
 }
 /* FIN NAVIGATION */
 
+.background-wrap {
+	position: fixed;
+	z-index: -1000;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	top: 0;
+	left: 0;
+}
+
+#video-bg-elem {
+	position: absolute;
+	top: 0;
+	left: 0;
+	min-height: 100%;
+	min-width: 100%;
+}
+.content {
+	position: absolute;
+	width: 100%;
+	min-height: 100%;
+	z-index: 1000;
+	background-color: rgba(0,0,0,0.7);
+}
+.content h1 {
+	text-align: center;
+	font-size: 65px;
+	text-transform: uppercase;
+	font-weight: 300;
+	color: #fff;
+	padding-top: 15%;
+	margin-bottom: 10px;
+}
+.content p {
+	text-align: center;
+	font-size: 20px;
+	letter-spacing: 3px;
+	color: #aaa;
+}
 .buttonIntro {
 	-webkit-animation: neon2 1.5s ease-in-out infinite alternate;
   	-moz-animation: neon2 1.5s ease-in-out infinite alternate;
@@ -131,9 +170,8 @@ li a:hover {
 }
 
 .membres-background {
-	double bSize = 100%;
 	/* localhost/css/main.css */
-	background-image: url(../media/images/Membres/Vendeur_de_Masque.png);
+	background-image: url(/media/images/Membres/Vendeur_de_masque.jpg);
  	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -182,6 +220,11 @@ li a:hover {
 }
 
 .gallery > div:hover > img {
+  transform: scale(1.8,1.8);
+  transition: .3s transform;
+}
+
+.gallery > div:hover > iframe {
   transform: scale(1.8,1.8);
   transition: .3s transform;
 }
